--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "chootiya": "npm-run-all --parallel land madarchod",
-    "land": "vite",
-    "madarchod": "cross-env NODE_ENV=development electron .",
+    "dev": "npm-run-all --parallel dev:react dev:electron",
+    "dev:react": "vite",
+    "dev:electron": "cross-env NODE_ENV=development electron .",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
